--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Main Page</h1>
     <a href="recipes/hamburger.html">Hamburger</a>
     <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/pizza.html"></a>Pizza</a>
+    <a href="recipes/pizza.html">Pizza</a>
 
 </body>
 </html>
