--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../Images/Lasagna.jpg" alt="Lasagna" height="500" length="500">
+    <br>
+    <b>Lasagna Ingredients</b>
+    <br>
+    The Allrecipes community adores this lasagna recipe because it's incredibly customizable, 
+    <br>
+    so you can easily alter the ingredient list to suit your needs. 
+    <br>
+    If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:
+
+    <b>Ingredients</b>
+    <br>
+    <b>Meat:</b> This super meaty lasagna has sweet Italian sausage and lean ground beef.
+    <b>Onion and garlic:</b> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.
+    <b>Tomato products:</b> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.
+    <b>Sugar:</b> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.
+    <b>Spices and seasonings:</b> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.
+    <b>Lasagna noodles:</b> Use store-bought or homemade lasagna noodles.
+    <b>Cheeses:</b> Parmesan, mozzassrella, and ricotta cheese make this lasagna extra decadent.
+    <b>Egg:</b> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.
+
 </body>
 </html>
