Added info and did HTML for recipes Added all info required on those pages.

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -7,6 +7,22 @@
 </head>
 <body>
     <h1>Hamburger</h1>
-    <img src="../Images/Hamburger.jpeg" alt="Hamburger">
+    <img src="../Images/Hamburger.jpeg" alt="Hamburger" height="500" length="500">
+    <h2>Description</h2>
+    This is a great hamburger for the grill. Feta cheese gives it a rich and creamy taste.
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound lean ground beef</li>
+        <li>½ teaspoon Worcestershire sauce</li>
+        <li>1 teaspoon dried parsley</li>
+        <li>Salt and pepper to taste</li>
+        <li>1 cup crumbled feta cheese</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat an outdoor grill for medium heat, and lightly oil the grate.</li>
+        <li>Knead together the ground beef, Worcestershire sauce, parsley, salt, and pepper in a bowl. Form the mixture into 8 equal-sized balls; flatten to make thin patties. Place about 1/4 cup of feta cheese onto each of four of the patties. Top each of the patties with cheese with one of the patties without; press the edges together to seal the cheese into the center.</li>
+        <li>Cook on the preheated grill until the burgers are cooked to your desired degree of doneness, 7 to 8 minutes per side for well done. An instant-read thermometer inserted into the center should read 160 degrees F (70 degrees C).</li>
+    </ol>
 </body>
 </html>
