--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <h1>Lasagna</h1>
     <img src="../Images/Lasagna.jpg" alt="Lasagna" height="500" length="500">
     <br>
-    <b>Lasagna Ingredients</b>
+    <h2><b>Lasagna Ingredients</b></h2>
     <br>
     The Allrecipes community adores this lasagna recipe because it's incredibly customizable, 
     <br>
@@ -17,16 +17,26 @@
     <br>
     If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:
 
-    <b>Ingredients</b>
-    <br>
-    <b>Meat:</b> This super meaty lasagna has sweet Italian sausage and lean ground beef.
-    <b>Onion and garlic:</b> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.
-    <b>Tomato products:</b> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.
-    <b>Sugar:</b> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.
-    <b>Spices and seasonings:</b> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.
-    <b>Lasagna noodles:</b> Use store-bought or homemade lasagna noodles.
-    <b>Cheeses:</b> Parmesan, mozzassrella, and ricotta cheese make this lasagna extra decadent.
-    <b>Egg:</b> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.
-
+    <h2><b>Ingredients</b></h2>
+    <ul>
+        <li><b>Meat:</b> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+        <li><b>Onion and garlic:</b> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+        <li><b>Tomato products:</b> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+        <li><b>Sugar:</b> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+        <li><b>Spices and seasonings:</b> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+        <li><b>Lasagna noodles:</b> Use store-bought or homemade lasagna noodles.</li>
+        <li><b>Cheeses:</b> Parmesan, mozzassrella, and ricotta cheese make this lasagna extra decadent.</li>
+        <li><b>Egg:</b> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+    </ul>
+        <h2>How to Make Lasagna Step-By-Step</h2>
+        <h3>Here's a very brief overview of what you can expect when you make homemade lasagna:</h3>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+</ol>
 </body>
 </html>
